// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RectificationsProvider fetching rectifications should have correct state after fetching all 1`] = `
Object {
  "data": Array [
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:24 GMT",
      "id": 1,
      "request_reason": "The data was incorrect.",
    },
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:37 GMT",
      "id": 2,
      "request_reason": "The data was incorrect two.",
    },
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:43 GMT",
      "id": 3,
      "request_reason": "The data was incorrect two three.",
    },
  ],
  "paging": Object {
    "current": 1,
    "total": 2,
  },
}
`;

exports[`RectificationsProvider fetching rectifications should have correct state after fetching all 2`] = `
Object {
  "data": Array [
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:24 GMT",
      "id": 4,
      "request_reason": "The data was incorrect.",
      "status": "APPROVED",
    },
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:37 GMT",
      "id": 5,
      "request_reason": "The data was incorrect two.",
      "status": "DISAPPROVED",
    },
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:43 GMT",
      "id": 6,
      "request_reason": "The data was incorrect two three.",
      "status": "APPROVED",
    },
  ],
  "paging": Object {
    "current": 1,
    "total": 2,
  },
}
`;

exports[`RectificationsProvider fetching rectifications should have correct state after fetching pending 1`] = `
Object {
  "data": Array [
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:24 GMT",
      "id": 1,
      "request_reason": "The data was incorrect.",
    },
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:37 GMT",
      "id": 2,
      "request_reason": "The data was incorrect two.",
    },
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:43 GMT",
      "id": 3,
      "request_reason": "The data was incorrect two three.",
    },
  ],
  "paging": Object {
    "current": 1,
    "total": 2,
  },
}
`;

exports[`RectificationsProvider fetching rectifications should have correct state after fetching processed 1`] = `
Object {
  "data": Array [
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:24 GMT",
      "id": 4,
      "request_reason": "The data was incorrect.",
      "status": "APPROVED",
    },
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:37 GMT",
      "id": 5,
      "request_reason": "The data was incorrect two.",
      "status": "DISAPPROVED",
    },
    Object {
      "created_at": "Mon, 02 Jul 2018 21:31:43 GMT",
      "id": 6,
      "request_reason": "The data was incorrect two three.",
      "status": "APPROVED",
    },
  ],
  "paging": Object {
    "current": 1,
    "total": 2,
  },
}
`;

exports[`RectificationsProvider should render correctly 1`] = `
<[object Object]
  value={
    Object {
      "approveRectification": [Function],
      "fetchAllRectifications": [Function],
      "fetchPendingRectifications": [Function],
      "fetchProcessedRectifications": [Function],
      "isLoading": false,
      "pendingRectifications": Object {
        "paging": Object {
          "current": 1,
        },
      },
      "processedRectifications": Object {
        "paging": Object {
          "current": 1,
        },
      },
    }
  }
/>
`;
